<resources>
    <string name="app_name">SCOS</string>
    <string name="order">点菜</string>
    <string name="check">查看</string>
    <string name="sign">登录</string>
    <string name="help">帮助</string>
    <string name="Login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="homepage">主页</string>
    <string name="login_or_register">登录\\注册</string>
    <string name="back">返回</string>
    <string name="invalid_input">输入内容不符合规则</string>
    <string name="welcome">欢迎您用餐</string>
    <string name="check_order">查看菜单</string>
    <string name="food_details">菜品详情</string>
</resources>
